# BlastEngine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  CommonValues.h  DirectionalLight.cpp  Light.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h  Util.h  Window.cpp  Window.h  conanfile.txt  main.cpp  packages.config
include/boost/: di.hpp
res/objects/: plane_bottom.mtl  sphere.mtl
res/shaders/: BasicShader.frag  BasicShader.vert  DifferedGeometryPass.frag  DifferedGeometryPass.geom  DifferedGeometryPass.vert  DifferedLightPass.frag  DifferedLightPass.vert  (+30 more)
shaders/: BasicShader.fs  BasicShader.vs
src/: BlastEngine.h  CMakeLists.txt  Camera.cpp  DirectionalLight.h  DrawHouse.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Model.h  MorderOpenGLUdemyTutorial.sln  MorderOpenGLUdemyTutorial.vcxproj  MorderOpenGLUdemyTutorial.vcxproj.filters  Object.h  Shader.cpp  Shader.h  SpotLight.h  Texture.cpp  Texture.h  Window.cpp  main.cpp
src/Animation/: AnimatedEntity.cpp  AnimatedEntity.h  AnimatedMesh.cpp  AnimatedMesh.h  Animation.h  AnimationComponent.h  AnimationRendererComponent.h  Joint.cpp  Joint.h  JointTransform.h  KeyFrame.h
src/Common/: CommonValues.h  Helpers.cpp  Helpers.h  ProfileTimer.cpp  Time.cpp  Time.h  Util.cpp  Util.h  math3d.h
src/Core/: CommonValues.h  CoreEngine.cpp  CoreEngine.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Input.h  MousePicker.cpp  MousePicker.h  Scene.cpp  Scene.h  Window.cpp  Window.h
src/Core/Components/: EffectComponent.h  EntityComponent.h  FogComponent.h  GUIComponent.h  GameComponent.h  LightComponent.h  MeshRenderer.h  MeshedComponent.h  MeshedRendererComponent.h  PhysicsEngineComponent.cpp  TerrainRenderer.h  TerrainRendererComponent.h
src/Core/Components/Attachment/: Attachment.h  TPSCameraAttachment.cpp  TPSCameraAttachment.h
src/Core/Components/Behaviours/: LightRotationComponent.h  PlayerMovement.h  SkyBoxEffectsComponent.h
src/Core/Components/CollusionDetection/: TerrainCollusionDetection.h
src/Core/Components/RenderingComponents/: AnimatedRendererComponent.h  DifferedRenderingComponent.h  EffectComponent.h  FogComponent.h  GUIRendererComponent.h  LightComponent.h  MeshedComponent.h  MeshedRendererComponent.h  ShadowRendererComponent.h  SkyBoxRendererComponent.h  TerrainRendererComponent.h  WaterRendererComponent.h
src/Core/Entities/: EffectEntity.cpp  EffectEntity.h  Entity.cpp  Entity.h  GUIEntity.cpp  GUIEntity.h  LightEntity.cpp  LightEntity.h  MeshedEntity.cpp  MeshedEntity.h
src/Core/Exceptions/: OpenGLException.h  RenderingEngineException.h  ShaderException.h
src/Game/: SlickDriveGame.cpp  SlickDriveGame.h  SphereMovement.h
src/Game/Scenes/: ShadingScene.h  TestScene.cpp  TestScene.h
src/Physics/: PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.cpp  PhysicsObject.h
src/Physics/Coliders/: AxisAlignedBoundingBox.cpp  BoundingSphere.cpp  BoundingSphere.h  IntersectData.h  Plane.cpp
src/Physics/Colliders/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  Collider.cpp  Collider.h  IntersectData.h  Line.cpp  Line.h  Plane.cpp  Plane.h  Point.cpp  Point.h  TerrainCollider.cpp  TerrainCollider.h
src/Physics/Collisions/: Collision.cpp  Collision.h
src/Physics/Forces/: Force.cpp  Force.h
src/Physics/Objects/: PhysicsObject.cpp  PhysicsObject.h  RigidBody.cpp  RigidBody.h  TerrainBody.cpp  TerrainBody.h
src/Rendering/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Fog.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  RenderingEngine.cpp  RenderingEngine.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  Transform.cpp  Transform.h  Window.cpp  Window.h
src/Rendering/Animation/: AnimatedGameObject.cpp  AnimatedGameObject.h  Joint.cpp  Joint.h
src/Rendering/Camera/: Camera.cpp  Camera.h  FPSCamera.cpp  FPSCamera.h  QuatCamera.h  TPSCamera.cpp  TPSCamera.h
src/Rendering/DifferedRendering/: DifferedScreen.cpp  DifferedScreen.h
src/Rendering/GUI/: GUICamera.cpp  GUICamera.h  GUIMaterial.cpp  GUIMaterial.h  GUIMesh.cpp  GUIMesh.h  GUITexture.cpp  GUITexture.h
src/Rendering/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  OmniShadowMap.cpp  OmniShadowMap.h  PointLight.cpp  PointLight.h  Shadow.h  ShadowMap.cpp  ShadowMap.h  SpotLight.cpp  SpotLight.h
src/Rendering/Loaders/: AnimatedLoader.cpp  AnimatedLoader.h  AnimationLoader.cpp  AnimationLoader.h  GUILoader.cpp  GUILoader.h  MeshedLoader.cpp  MeshedLoader.h
src/Rendering/PostProcessing/: FrameBufferObject.cpp  FrameBufferObject.h  Screen.cpp  Screen.h
src/Rendering/Primitives/: Water.cpp  Water.h
src/Rendering/Shaders/: AnimationShader.cpp  AnimationShader.h  DifferedShader.h  DirectionalLightShadowMapShader.cpp  DirectionalLightShadowMapShader.h  FogShader.cpp  FogShader.h  ForwardAmbientShader.cpp  ForwardAmbientShader.h  ForwardDirectionalLightShader.cpp  ForwardDirectionalLightShader.h  ForwardPointLightShader.cpp  ForwardPointLightShader.h  ForwardSpotLightShader.cpp  ForwardSpotLightShader.h  GUIShader.cpp  GUIShader.h  PostProcessingScreenShader.h  Shader.cpp  Shader.h  SkyBoxShader.cpp  SkyBoxShader.h  TerrainShader.cpp  TerrainShader.h  WaterShader.h
src/Rendering/Shadows/: ShadowMap.cpp
src/Rendering/Terrain/: Terrain.cpp  Terrain.h
src/res/fonts/: ubuntu.fnt
src/res/models/House/: house.3ds  house.dae
src/res/models/grassland/: grassland.fbx  grassland1.mtl
src/res/shaders/: AnimatedShader.vert  BasicShader.frag  BasicShader.vert  DirectionalLightShadowMapShader.frag  DirectionalLightShadowMapShader.vert  FogShader.frag  FogShader.vert  ForwardAmbient.frag  ForwardDirectionalLight.frag  ForwardPointLight.frag  ForwardSpotLight.frag  LightCube.vert  Lighting.frag  PostProcessingScreen.frag  SimpleTerrainShader.frag  SimpleTerrainShader.vert  SkyBox.frag  SkyBox.vert  TerrainShader.vert
(+11 files in other folders)
